fixed select issue on mobile devices

--- a/shopping/src/main/ui/src/components/Card/Card.css
+++ b/shopping/src/main/ui/src/components/Card/Card.css
@@ -56,3 +56,7 @@
     line-height: 31px;
     height: 36px;
 }
+
+.card-footer .clr-select {
+    padding: 0;
+}
